# ebook_cvml_repo

./: CMakeLists.txt  LicPlateReader.sln  LicPlateReader.vcxproj  README.txt  main.cpp
cfg/: ocr.cfg
darknet/names/: ocr.names
src/: main.cpp
x64/Release/: LicPlateReader.exe.recipe  LicPlateReader.iobj  LicPlateReader.ipdb  LicPlateReader.vcxproj.FileListAbsolute.txt
x64/Release/LicPlateReader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LicPlateReader.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
x64/Release/darknet/cfg/: plates.cfg
x64/Release/darknet/names/: plates.names
